After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746665 - Tab bar should not be focusable
Tab bar should not be focusable
Status: RESOLVED FIXED
Product: gnome-terminal
Classification: Core
Component: general
3.16.x
Other Linux
: Normal minor
: ---
Assigned To: GNOME Terminal Maintainers
GNOME Terminal Maintainers
: 761800 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-03-23 20:07 UTC by Egmont Koblinger
Modified: 2016-03-04 20:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
notebook: Don't let the keyboard focus enter from the tab label (1.86 KB, patch)
2015-03-24 14:47 UTC, Debarshi Ray
none Details | Review
notebook: Don't let the keyboard focus enter from the tab label (1.61 KB, patch)
2015-03-25 11:09 UTC, Debarshi Ray
committed Details | Review

Description Egmont Koblinger 2015-03-23 20:07:54 UTC
Originally reported at https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=663253

This behavior has always bothered me, as I see no use in focusing the tab label. It's just a pain when I accidentally do it.

With the upgrade to Ubuntu Vivid (beta) it became worse: the focused tab label looks exactly the same as the unfocused one. So it doesn't even give you a clue why typing characters doesn't work.

Note: gedit doesn't let you focus the tabs either.
Comment 1 Egmont Koblinger 2015-03-24 10:10:16 UTC
Just for reference: Vivid theme bugreport: https://bugs.launchpad.net/ubuntu/+source/ubuntu-themes/+bug/1435765
Comment 2 Debarshi Ray 2015-03-24 14:47:39 UTC
Created attachment 300200 [details] [review]
notebook: Don't let the keyboard focus enter from the tab label
Comment 3 Egmont Koblinger 2015-03-24 15:40:44 UTC
Works for me, thanks a lot! :)
Comment 4 Christian Persch 2015-03-24 17:29:22 UTC
Review of attachment 300200 [details] [review]:

With that changed, ok to commit.

::: src/terminal-notebook.c
@@ +345,3 @@
+
+  child = gtk_notebook_get_nth_page (notebook, current_page);
+  screen = terminal_screen_container_get_screen (TERMINAL_SCREEN_CONTAINER (child));

All of the above can be replaced by just a call to terminal_notebook_get_active_screen() (or terminal_mdi_container_get_active_screen()).
Comment 5 Matthias Clasen 2015-03-25 00:38:39 UTC
Just to answer the 'whats the use of this' question:

Accessibility tools such as orca rely on being able to focus all relevant text in the ui, so it can be read.
Comment 6 Egmont Koblinger 2015-03-25 00:53:11 UTC
Currently the tab label can't be focused by keyboard, only by mouse. This could also be an accessibility problem for some people, although at different area. Are there people who need both a screen reader and keyboard navigation?

Also, there's no tab if only a single terminal is opened. Is there a way to read out the window's title? If not, do some people potentially open a second tab purely as a workaround to make a tab appear so that the title can be read?

I'd like to understand if this change causes an actual regression for some people who require a11y, and if so then what should we do...

Hopefully the window title can be read out easily, and then that (along with e.g. Ctrl+PageUp to switch tab) is good enough.
Comment 7 Egmont Koblinger 2015-03-25 00:57:02 UTC
> Are there people who need both a screen reader and keyboard navigation?

Okay, I should have thought about it before asking the question. Those with bad sight probably have problem seeing the mouse pointer too, so yes, it's a valid scenario.
Comment 8 Debarshi Ray 2015-03-25 06:58:12 UTC
(In reply to Egmont Koblinger from comment #6)
> Hopefully the window title can be read out easily, and then that (along with
> e.g. Ctrl+PageUp to switch tab) is good enough.

Interestingly, gedit doesn't let you use Ctrl+PgUp/Dn to switch tabs. Probably it should.
Comment 9 Debarshi Ray 2015-03-25 07:41:59 UTC
So gedit uses alt+ctrl+pgup/pgdn (because ctrl+pgup/pgdn is needed by the text view) and alt+<n> for switching tabs, and Orca is still able to read the tab title.
Comment 10 Debarshi Ray 2015-03-25 11:09:43 UTC
Created attachment 300270 [details] [review]
notebook: Don't let the keyboard focus enter from the tab label
Comment 11 Debarshi Ray 2015-03-25 11:14:33 UTC
I played with gnome-terminal a bit more, and I don't see the loss in accessibility. Earlier, if you were not using a menu, you could only move the keyboard focus to the tab label by clicking on it. So, it was not ideal with respect to keyboard navigation, anyway.

As for the screen reader, it wasn't as if Orca was reading the labels on all the tabs when you switched to a gnome-terminal window. It was only reading them when  you moved through tabs, and it still does that now.

Or am I missing something?
Comment 12 Matthias Clasen 2015-03-25 12:22:01 UTC
lets bring in the experts!
Comment 13 Magdalen Berns (irc magpie) 2015-03-25 12:26:52 UTC
(In reply to Egmont Koblinger from comment #6)
> Are there people who need both a screen reader and keyboard navigation?

key nav is also used by gnome shell magnifier users so this would probably be relevant to their needs as well as those of screenreader users.
Comment 14 Egmont Koblinger 2015-03-25 13:03:30 UTC
(In reply to Debarshi Ray from comment #11)
> Or am I missing something?

I haven't played with orca yet, but I also have the feeling that the current change probably doesn't bring any a11y regression.

Whether the current situation is good enough is another question.
Comment 15 Egmont Koblinger 2015-10-02 19:16:23 UTC
Any objections? I'd really like to submit this patch.

If there's any a11y issue arising, we can still think about how to resolve that (worst case: revert this patch, but at least we know where we stand).
Comment 16 Christian Persch 2015-10-02 19:19:04 UTC
Comment on attachment 300270 [details] [review]
notebook: Don't let the keyboard focus enter from the tab label

Master only, please.
Comment 17 Egmont Koblinger 2015-10-02 20:46:43 UTC
Sure. Committed.
Comment 18 Egmont Koblinger 2016-03-04 20:05:22 UTC
FYI: No regression was reported for 5 months now, so (as approved by Christian) I've backported the change to 3-18.
Comment 19 Egmont Koblinger 2016-03-04 20:06:28 UTC
*** Bug 761800 has been marked as a duplicate of this bug. ***