notebook: Don't let the keyboard focus enter from the tab label

Merely setting TerminalTabLabel:can-focus to FALSE is not enough to
prevent the keyboard focus from entering the tab label. One can still
click the current tab's label and have the keyboard focus move there.

This solution was taken from gedit.

https://bugzilla.gnome.org/show_bug.cgi?id=746665
(cherry picked from commit 9ce642509b67d8140641a8e99cde44979d2e676c)